<resources>
    <string name="app_name">Mob2048</string>
    <string name="text_button_start">Начать игру</string>
    <string name="text_button_exit">Выйти из игры</string>
    <string name="text_score">Счет:   </string>
    <string name="start_score">0</string>
    <string name="button_left">←</string>
    <string name="button_right">→</string>
    <string name="button_up">↑</string>
    <string name="button_down">↓</string>
</resources>
