<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/title">

    <TextView
        android:id="@+id/textScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/btn_rounded_corner"
        android:fontFamily="sans-serif"
        android:text="@string/text_score"
        android:textColor="@color/purplejack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/Table"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/purplejack"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="@string/button_up"
        android:textColor="@color/purplejack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Table" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="@string/button_left"
        android:textColor="@color/purplejack"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/buttonUp"
        app:layout_constraintRight_toLeftOf="@id/buttonUp"/>

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="@string/button_right"
        android:textColor="@color/purplejack"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/buttonUp"
        app:layout_constraintLeft_toRightOf="@id/buttonUp" />

    <Button
        android:id="@+id/buttonDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="@string/button_down"
        android:textColor="@color/purplejack"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/buttonLeft"
        app:layout_constraintLeft_toRightOf="@id/buttonLeft"/>


</androidx.constraintlayout.widget.ConstraintLayout>